refactor: isSameName 메서드를 사용하여 기존 코드 간소화
디미터 원칙을 준수하기 위해 Car에서 로직 수행 후 값 반환